<?xml version="1.0"?>
<package>
	<name>suspension_controller</name>
	<version>2.0.0</version>
	<description>The suspension controller package, see README.md file for more details.</description>

	<maintainer email="tamer@tamersaadeh.com">Tamer Saadeh</maintainer>
	<author email="mattia.marenco@teamdiana.org">Mattia Marenco</author>

	<license>BSD</license>

	<url type="repository">https://github.com/team-diana/suspension</url>
	<url type="bugtracker">https://github.com/team-diana/suspension/issues</url>

	<!-- build dependencies -->
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>message_generation</build_depend>

	<!-- runtime dependencies -->
	<run_depend>roscpp</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>numpy</run_depend>

	<export>
		<!-- You can specify that this package is a metapackage here: -->
		<!-- <metapackage/> -->

		<!-- Other tools can request additional information be placed here -->
	</export>
</package>